compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_26.diag.txt
/kt45461_26.kt:13:25: error: type mismatch: inferred type is {K & Out<String>} but Out<Float> was expected
    val x: Out<Float> = Bar<Out<String>>().takeFoo(foo)
                        ^
/kt45461_26.kt:13:44: error: type argument for a type parameter S can't be inferred because it has incompatible upper bounds: Out<String>, K (multiple incompatible classes: String, Int)
    val x: Out<Float> = Bar<Out<String>>().takeFoo(foo)
                                           ^
/kt45461_26.kt:13:44: error: type mismatch: inferred type is {K & Out<String>} but Out<Float> was expected
    val x: Out<Float> = Bar<Out<String>>().takeFoo(foo)
                                           ^

